--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ header {
     flex-wrap: wrap;
 }*/
 nav {
-    background-color: #0d47a1;
+    background-color: #1f4e8c;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -1942,7 +1942,7 @@ function showAdmissionNotification() {
 <li><a onclick="showSection('courses')">Courses</a></li>
 
 <li class="dropdown">
-    <a>Achievements</a>
+    <a href="#">Achievements</a>
     <ul class="dropdown-content">
         <li><a onclick="showSection('Results')">Results</a></li>
         <li><a onclick="showSection('studentAchievements')">Student Achievements</a></li>
@@ -1951,7 +1951,7 @@ function showAdmissionNotification() {
 </li>
 
 <li class="dropdown">
-    <a>Placements</a>
+    <a href="#">Placements</a>
     <ul class="dropdown-content">
         <li><a onclick="showSection('Placement Overview')">Placement Overview</a></li>
         <li><a onclick="showSection('Placement Records')">Placement Records</a></li>
@@ -1961,7 +1961,7 @@ function showAdmissionNotification() {
 <li><a onclick="showSection('sports')">Sports</a></li>
 
 <li class="dropdown">
-    <a>Special Programs</a>
+    <a href="#">Special Programs</a>
     <ul class="dropdown-content">
         <li><a onclick="showSection('NSS')">NSS</a></li>
         <li><a onclick="showSection('CareerGuidance')">Career Guidance</a></li>
@@ -1972,7 +1972,7 @@ function showAdmissionNotification() {
 </li>
 
 <li class="dropdown">
-    <a>IQAC</a>
+    <a href="#">IQAC</a>
     <ul class="dropdown-content">
         <li><a onclick="showSection('AboutIQAC')">About IQAC</a></li>
         <li><a onclick="showSection('IQAC Objectives')">Objectives & Functions</a></li>
@@ -3896,6 +3896,7 @@ showSection('home');
 
 </body>
 </html>
+
 
 
 
