--- a/index.html
+++ b/index.html
@@ -1915,8 +1915,8 @@ function showAdmissionNotification() {
         <div class="menu-toggle">☰</div>
 		   <ul class="nav-list">
 
-<li><a onclick="showSection('home')">Home</a></li>
-<li><a onclick="showSection('about')">About</a></li>
+<li><a href="#" onclick="showSection('home')">Home</a></li>
+<li><a href="#" onclick="showSection('about')">About</a></li>
 
 <li class="dropdown">
     <a href="#">Administration</a>
@@ -1979,8 +1979,8 @@ function showAdmissionNotification() {
     </ul>
 </li>
 
-<li><a onclick="showSection('gallery')">Gallery</a></li>
-<li><a onclick="showSection('contact')">Contact Us</a></li>
+<li><a href="#" onclick="showSection('gallery')">Gallery</a></li>
+<li><a href="#" onclick="showSection('contact')">Contact Us</a></li>
 
 </ul>
 
@@ -3896,6 +3896,7 @@ showSection('home');
 
 </body>
 </html>
+
 
 
 
