--- a/index.html
+++ b/index.html
@@ -1939,7 +1939,7 @@ function showAdmissionNotification() {
     </ul>
 </li>
 
-<li><a onclick="showSection('courses')">Courses</a></li>
+<li><a href="#" onclick="showSection('courses')">Courses</a></li>
 
 <li class="dropdown">
     <a href="#">Achievements</a>
@@ -1958,7 +1958,7 @@ function showAdmissionNotification() {
     </ul>
 </li>
 
-<li><a onclick="showSection('sports')">Sports</a></li>
+<li><a href="#" onclick="showSection('sports')">Sports</a></li>
 
 <li class="dropdown">
     <a href="#">Special Programs</a>
@@ -3896,6 +3896,7 @@ showSection('home');
 
 </body>
 </html>
+
 
 
 
