--- a/index.html
+++ b/index.html
@@ -1711,7 +1711,7 @@ nav a:hover {
         position: absolute;
         top: 100%;
         left: 0;
-        background: #1f4e8c;
+        background:white// #1f4e8c;
         display: none;
         min-width: 200px;
     }
@@ -3896,6 +3896,7 @@ showSection('home');
 
 </body>
 </html>
+
 
 
 
