--- a/index.html
+++ b/index.html
@@ -1711,13 +1711,13 @@ nav a:hover {
         position: absolute;
         top: 100%;
         left: 0;
-        background:white// #1f4e8c;
+        background: #1f4e8c;
         display: none;
         min-width: 200px;
     }
 
     .dropdown:hover .dropdown-content {
-        display: block;
+        display: inline;
     }
 
     /* Hide hamburger in desktop */
@@ -3896,6 +3896,7 @@ showSection('home');
 
 </body>
 </html>
+
 
 
 
