--- a/index.html
+++ b/index.html
@@ -1714,6 +1714,7 @@ nav a:hover {
         background: #1f4e8c;
         display: none;
         min-width: 200px;
+		color: white;
     }
 
     .dropdown:hover .dropdown-content {
@@ -3896,6 +3897,7 @@ showSection('home');
 
 </body>
 </html>
+
 
 
 
