--- a/index.html
+++ b/index.html
@@ -560,7 +560,7 @@ nav a:hover {
     position: absolute;
     top: 100%;
     left: 0;
-    background-color: #ffffff;
+    background-color: #1f4e8c;
     min-width: 220px;
     box-shadow: 0 8px 16px rgba(0,0,0,0.2);
     border-radius: 6px;
@@ -568,7 +568,7 @@ nav a:hover {
 }
 
 .dropdown-content a {
-    color: #184a99;
+    color:#1f4e8c;
     padding: 12px 16px;
     display: block;
     text-align: left;
@@ -576,7 +576,7 @@ nav a:hover {
 }
 
 .dropdown-content a:hover {
-    background-color: #184a99;
+    background-color:#1f4e8c;
 }
 
 /* Show only on hover */
@@ -3898,6 +3898,7 @@ showSection('home');
 
 </body>
 </html>
+
 
 
 
