--- a/index.html
+++ b/index.html
@@ -613,7 +613,7 @@ nav a:hover {
 .dropdown-menu li a {
     display: block;
     padding: 10px 15px;
-    color: #333;
+    color: white;
     text-decoration: none;
 }
 
@@ -3898,6 +3898,7 @@ showSection('home');
 
 </body>
 </html>
+
 
 
 
