--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ nav {
     color:#0b5ed7; /* Gold highlight */
 }
 .nav-list a {
-	 background:#1f4e8c
+	 background:#1f4e8c;
     color: white;
     text-decoration: none;
     display: block;
@@ -3898,6 +3898,7 @@ showSection('home');
 
 </body>
 </html>
+
 
 
 
