--- a/index.html
+++ b/index.html
@@ -152,10 +152,12 @@ nav {
         box-shadow: 0 8px 20px rgba(0,0,0,0.3);
         padding: 10px 0;
         z-index: 1000;
+		  color: white;
     }
 
     .nav-list li {
         list-style: none;
+		  color: white;
     }
 
     .nav-list li a {
@@ -3898,6 +3900,7 @@ showSection('home');
 
 </body>
 </html>
+
 
 
 
