--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ body {
 /* ================= HEADER ================= */
 header {
     background: white;
-    color: white;
+    color: black;
     padding: 15px 30px;
 }
 
@@ -48,7 +48,17 @@ header {
     width: auto;
 	color:white;
 }
+.college-text h1 {
+    margin: 0;
+    font-size: 26px;
+}
 
+.college-text p {
+    margin: 3px 0;
+    font-size: 14px;
+	
+	
+}
 
 
 /* ================= MENU ================= */
@@ -3890,6 +3900,7 @@ showSection('home');
 
 </body>
 </html>
+
 
 
 
