--- a/index.html
+++ b/index.html
@@ -1797,9 +1797,18 @@ function generateStaffCards() {
         ["Dr. Dathar Vasavi", "HOD Microbiology"],
         ["Pushpa A", "HOD Physics"],
         ["J. Bhagavath Geetha", "HOD English"],
+		["Vasantha", "DL English"],
+		["Rajyalaxmi", "DL English"],
+		["Dr. S. Srilatha", "DL Telugu"],
+		["Vijaya", "DL Telugu"],
+		["Malathi", "DL Chemistry"],
         ["Vijaya Laxmi B", "HOD Chemistry"],
         ["Dr. Goola Sabitha", "HOD Commerce"],
+		["Dr. M Geetha", "DL Commerce"],
+		["T. Sowjanya", "DL Commerce"],
+		["K. Indraja", "DL Commerce"],
         ["Dr. Geetha K", "HOD Botany"],
+		["D. Swapna", "DL Botany"],
         ["Dr. K. Krishna Sowmya", "HOD Mathematics"],
         ["Kammari Pavani", "HOD Computer Science"],
         ["Dr. Prashanthi G", "HOD Zoology"],
@@ -1812,8 +1821,6 @@ function generateStaffCards() {
         ["Afreen Siddiqua", "DL in Economics"],
         ["K. Vani Elleshwari", "DL in History"],
         ["Aleti Divya", "DL in Computer Science"],
-        ["G. Revathi", "DL in Zoology"],
-        ["V. Sunitha Reddy", "DL in Computer Science"],
         ["Sangaala Ruchitha", "DL in Mathematics"],
 		["Dr. S. Rajini", "Physical Director"]
     ];
@@ -3900,6 +3907,7 @@ showSection('home');
 
 </body>
 </html>
+
 
 
 
