--- a/index.html
+++ b/index.html
@@ -1798,7 +1798,8 @@ function generateStaffCards() {
         ["Pushpa A", "HOD Physics"],
         ["J. Bhagavath Geetha", "HOD English"],
 		["Vasantha", "DL English"],
-		["Rajyalaxmi", "DL English"],
+		["Dr. Rajyalaxmi", "DL English"],
+		["C Sravanthi", "DL English"],
 		["Dr. S. Srilatha", "DL Telugu"],
 		["Vijaya", "DL Telugu"],
 		["Malathi", "DL Chemistry"],
@@ -3907,6 +3908,7 @@ showSection('home');
 
 </body>
 </html>
+
 
 
 
