--- a/index.html
+++ b/index.html
@@ -2598,7 +2598,7 @@ else if (section === "studentAchievements") {
         </div>
 
         <div class="gold-card">
-            <img src="images/gold2.jpg" alt="Gold Medalist 2">
+            <img src="sony.jpeg" alt="Gold Medalist 2">
             <h4>Ms. Sony</h4>
             <p>Gold Medal – Palamuru University 2024</p>
         </div>
@@ -3331,7 +3331,7 @@ else if (section === "Laboratories") {
 
         <div class="lab-card">
             <img src="images/botany.png" alt="Biology Laboratory">
-            <div class="lab-title">Biotechnology / Biology Lab</div>
+            <div class="lab-title">Botany Lab</div>
         </div>
 
         <div class="lab-card">
@@ -3340,7 +3340,7 @@ else if (section === "Laboratories") {
         </div>
 
         <div class="lab-card">
-            <img src="images/micro.jpg" alt="Language Lab">
+            <img src="micro.jpg" alt="Language Lab">
             <div class="lab-title">Microbiology Lab</div>
         </div>
 
@@ -3908,6 +3908,7 @@ showSection('home');
 
 </body>
 </html>
+
 
 
 
