--- a/index.html
+++ b/index.html
@@ -3340,7 +3340,7 @@ else if (section === "Laboratories") {
         </div>
 
         <div class="lab-card">
-            <img src="micro.jpg" alt="Language Lab">
+            <img src="micro.jpeg" alt="Language Lab">
             <div class="lab-title">Microbiology Lab</div>
         </div>
 
@@ -3908,6 +3908,7 @@ showSection('home');
 
 </body>
 </html>
+
 
 
 
