--- a/index.html
+++ b/index.html
@@ -2065,6 +2065,9 @@ function showSection(section) {
     <div class="carousel-item"><img src="h4.jpeg" class="d-block w-100">	<div class="carousel-caption">
         <h4>P. Himabindu Receiving Gold Medal</h4>
 	</div></div>
+	<div class="carousel-item"><img src="sony.jpeg" class="d-block w-100">	<div class="carousel-caption">
+        <h4>U Sony got Gold Medal</h4>
+	</div></div>
     <div class="carousel-item"><img src="h6.jpeg" class="d-block w-100"> 
 		<div class="carousel-caption">
         <h4>Gold Medal at Shooting Ball Nationals</h4>
@@ -2637,6 +2640,24 @@ else if (section === "studentAchievements") {
     </div>
 
 </div>
+<div class="abroad-section">
+
+    <div class="abroad-title">
+        Featured Achievement – Students Studying Abroad Central University
+    </div>
+
+    <div class="abroad-grid">
+
+        <div class="abroad-card">
+            <img src="mounika.jpg" alt="Student Abroad 1">
+            <h4>A. Mounika</h4>
+            <p>Pursuing M.Sc. Microbiology at Central University Tamilnadu</p>
+        </div>
+
+  
+    </div>
+
+</div>
 
 
          <h3 style="color:#0a58ca;">🏆 Sports Achievements</h3>
@@ -3198,7 +3219,7 @@ else if (section === "sports") {
 
 <div class="sports-gallery">
 		<img src="images/padmavathi.jpg" alt="Yoga Session">
-	<img src="images/rep.jpeg" alt="Yoga Session">
+	<img src="rep.jpeg" alt="Yoga Session">
     <img src="images/s1.png" alt="Athletics Competition">
     <img src="images/s2.png" alt="Kabaddi Match">
     <img src="images/s3.png" alt="Volleyball Tournament">
@@ -3908,6 +3929,7 @@ showSection('home');
 
 </body>
 </html>
+
 
 
 
