--- a/index.html
+++ b/index.html
@@ -2065,9 +2065,7 @@ function showSection(section) {
     <div class="carousel-item"><img src="h4.jpeg" class="d-block w-100">	<div class="carousel-caption">
         <h4>P. Himabindu Receiving Gold Medal</h4>
 	</div></div>
-	<div class="carousel-item"><img src="sony.jpeg" class="d-block w-100">	<div class="carousel-caption">
-        <h4>U Sony got Gold Medal</h4>
-	</div></div>
+
     <div class="carousel-item"><img src="h6.jpeg" class="d-block w-100"> 
 		<div class="carousel-caption">
         <h4>Gold Medal at Shooting Ball Nationals</h4>
@@ -2643,13 +2641,13 @@ else if (section === "studentAchievements") {
 <div class="abroad-section">
 
     <div class="abroad-title">
-        Featured Achievement – Students Studying Abroad Central University
+        Featured Achievement – Students Studying at Central University
     </div>
 
     <div class="abroad-grid">
 
         <div class="abroad-card">
-            <img src="mounika.jpg" alt="Student Abroad 1">
+            <img src="mounika.jpeg" alt="Student Abroad 1">
             <h4>A. Mounika</h4>
             <p>Pursuing M.Sc. Microbiology at Central University Tamilnadu</p>
         </div>
@@ -3929,6 +3927,7 @@ showSection('home');
 
 </body>
 </html>
+
 
 
 
