--- a/index.html
+++ b/index.html
@@ -1822,8 +1822,8 @@ function generateStaffCards() {
         ["Afreen Siddiqua", "DL in Economics"],
         ["K. Vani Elleshwari", "DL in History"],
         ["Aleti Divya", "DL in Computer Science"],
-        ["Sangaala Ruchitha", "DL in Mathematics"],
-		["Dr. S. Rajini", "Physical Director"]
+        ["Sangaala Ruchitha", "DL in Mathematics"]
+	
     ];
 
     return staff.map(s => `
@@ -3927,6 +3927,7 @@ showSection('home');
 
 </body>
 </html>
+
 
 
 
